# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import authRouter from "./auth";
 import distributorsRouter from "./distributors";
 import productsRouter from "./products";
 import storesRouter from "./stores";
+import storeGroupsRouter from "./storeGroups";
 import tasksRouter from "./tasks";
 import deliveriesRouter from "./deliveries";
 import accountingRouter from "./accounting";
@@ -19,6 +20,7 @@ router.use("/auth", authRouter);
 router.use("/distributors", distributorsRouter);
 router.use("/products", productsRouter);
 router.use("/stores", storesRouter);
+router.use("/store-groups", storeGroupsRouter);
 router.use("/tasks", tasksRouter);
 router.use("/deliveries", deliveriesRouter);
 router.use("/accounting", accountingRouter);
